@@ -1,3 +1,6 @@
+2008-7-9  Andrew Gelman  <gelman@stat.columbia.edu>  
+    * R/bayesglm: for gaussian family, dispersion <- var(y)/10000
+
 2008-6-23  Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.1-9.
     * R/se.coef: remove trick to show the coef names
